style kitty tabs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,13 @@ font_family MesloLGS NF
 
 enabled_layouts tall:bias=70, fat:bias=70, stack, horizontal, vertical, grid
 
+allow_remote_control yes
+listen_on unix:@mykitty
+# listen_on unix:/tmp/mykitty
+
+tab_bar_edge top
+tab_bar_style slant
+
 map kitty_mod+1 goto_layout tall
 map kitty_mod+2 goto_layout fat
 map kitty_mod+3 goto_layout horizontal
@@ -46,6 +53,3 @@ map --when-focus-on var:in_editor ctrl+l
 # map ctrl+h kitten pass_keys.py left   ctrl+h
 # map ctrl+l kitten pass_keys.py right  ctrl+l
 
-allow_remote_control yes
-listen_on unix:@mykitty
-# listen_on unix:/tmp/mykitty
