add onedark themes

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,4 @@
+# vim:ft=kitty
 # clipboard_control write-clipboard write-primary no-append
 # include ./theme.conf
 
@@ -53,3 +54,9 @@ map --when-focus-on var:in_editor ctrl+l
 # map ctrl+h kitten pass_keys.py left   ctrl+h
 # map ctrl+l kitten pass_keys.py right  ctrl+l
 
+
+
+# BEGIN_KITTY_THEME
+# One Dark
+include current-theme.conf
+# END_KITTY_THEME
