reorganize kitty settings

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,40 +1,17 @@
-# vim:ft=kitty
-# clipboard_control write-clipboard write-primary no-append
-# include ./theme.conf
+# vim:ft=sh
 
 enable_audio_bell no
 font_family MesloLGS NF
 
-enabled_layouts tall:bias=70, fat:bias=70, stack, horizontal, vertical, grid
+enabled_layouts tall:bias=70, horizontal fat:bias=70, vertical, stack, grid
 
 allow_remote_control yes
-listen_on unix:@mykitty
-# listen_on unix:/tmp/mykitty
 
 tab_bar_edge top
 tab_bar_style slant
 
-map kitty_mod+1 goto_layout tall
-map kitty_mod+2 goto_layout fat
-map kitty_mod+3 goto_layout horizontal
-map kitty_mod+4 goto_layout vertical
-map kitty_mod+5 goto_layout stack
-map kitty_mod+6 goto_layout grid
-
-map kitty_mod+enter new_window_with_cwd
-# map cmd+enter new_window_with_cwd
-
 # See: https://sw.kovidgoyal.net/kitty/mapping/#conditional-mappings-depending-on-the-state-of-the-focused-window
 # Clear mapping and pass keymaps to vim directly when active
-map ctrl+c copy_and_clear_or_interrupt
-map ctrl+v paste_selection_or_clipboard
-map --when-focus-on var:in_editor ctrl+c
-map --when-focus-on var:in_editor ctrl+v
-# map cmd+c copy_and_clear_or_interrupt
-# map cmd+v paste_selection_or_clipboard
-# map --when-focus-on var:in_editor cmd+c
-# map --when-focus-on var:in_editor cmd+v
-
 map ctrl+j neighboring_window bottom
 map ctrl+k neighboring_window top
 map ctrl+h neighboring_window left
@@ -44,17 +21,33 @@ map --when-focus-on var:in_editor ctrl+k
 map --when-focus-on var:in_editor ctrl+h
 map --when-focus-on var:in_editor ctrl+l
 
-# map ctrl+c kitten pass_keys.py copy ctrl+c
-# map ctrl+v kitten pass_keys.py paste ctrl+v
-# map cmd+c kitten pass_keys.py copy cmd+c
-# map cmd+b kitten pass_keys.py paste cmd+v
-# https://github.com/knubie/vim-kitty-navigator
-# map ctrl+j kitten pass_keys.py bottom ctrl+j
-# map ctrl+k kitten pass_keys.py top    ctrl+k
-# map ctrl+h kitten pass_keys.py left   ctrl+h
-# map ctrl+l kitten pass_keys.py right  ctrl+l
+# Linux mappings
+map ctrl+c copy_and_clear_or_interrupt
+map ctrl+v paste_selection_or_clipboard
+map --when-focus-on var:in_editor ctrl+c
+map --when-focus-on var:in_editor ctrl+v
+map kitty_mod+enter new_window_with_cwd
+map kitty_mod+1 goto_layout tall
+map kitty_mod+3 goto_layout horizontal
+map kitty_mod+2 goto_layout fat
+map kitty_mod+4 goto_layout vertical
+map kitty_mod+5 goto_layout stack
+map kitty_mod+6 goto_layout grid
+listen_on unix:@mykitty
 
-
+# Macos mappings
+# map cmd+c copy_and_clear_or_interrupt
+# map cmd+v paste_selection_or_clipboard
+# map --when-focus-on var:in_editor cmd+c
+# map --when-focus-on var:in_editor cmd+v
+# map cmd+enter new_window_with_cwd
+# map cmd+1 goto_layout tall
+# map cmd+3 goto_layout horizontal
+# map cmd+2 goto_layout fat
+# map cmd+4 goto_layout vertical
+# map cmd+5 goto_layout stack
+# map cmd+6 goto_layout grid
+# listen_on unix:/tmp/mykitty
 
 # BEGIN_KITTY_THEME
 # One Dark
