fix issue with kitty conf

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 enable_audio_bell no
 font_family MesloLGS NF
 
-enabled_layouts tall:bias=70, horizontal fat:bias=70, vertical, stack, grid
+enabled_layouts tall:bias=70, horizontal, fat:bias=70, vertical, stack, grid
 
 allow_remote_control yes
 
