--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -50,6 +50,6 @@ listen_on unix:@mykitty
 # listen_on unix:/tmp/mykitty
 
 # BEGIN_KITTY_THEME
-# One Dark
+# One Dark-Darker
 include current-theme.conf
 # END_KITTY_THEME
