--- a/kitty/.config/kitty/themes/OneDark-Darker.conf
+++ b/kitty/.config/kitty/themes/OneDark-Darker.conf
@@ -1,4 +1,5 @@
-# One Dark Darker
+# One Dark Darker 
+# adapted from: https://github.com/navarasu/onedark.nvim/blob/master/lua/onedark/palette.lua#L30
 # This work is licensed under the terms of the GPL-2.0 license.
 # For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
 
