--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,28 +1,48 @@
-# One Dark Darker
+# One Dark Darker 
+# adapted from: https://github.com/navarasu/onedark.nvim/blob/master/lua/onedark/palette.lua#L30
 # This work is licensed under the terms of the GPL-2.0 license.
 # For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
 
-# Colors
+#: The basic colors
 
 foreground #a0a8b7
 background #181b20
+selection_foreground #a0a8b7
+selection_background #323641
 
+#: The basic 16 colors
+
+#: black
 color0 #0e1013
-color1 #e55561
-color2 #8ebd6b
-color3 #e2b86b
-color4 #4fa6ed
-color5 #bf68d9
-color6 #48b0bd
-color7 #a0a8b7
 color8 #535965
-color9 #e55561
-color10 #8ebd6b
-color11 #e2b86b
-color12 #4fa6ed
-color13 #bf68d9
-color14 #48b0bd
-color15 #a0a8b7
+
+#: red
+color1 #e55561
+color9 #e86671
+
+#: green
+color2 #8ebd6b
+color10 #98c379
+
+#: yellow
+color3 #e2b86b
+color11 #e5c07b
+
+#: blue
+color4 #4fa6ed
+color12 #61afef
+
+#: magenta
+color5 #bf68d9
+color13 #c678dd
+
+#: cyan
+color6 #48b0bd
+color14 #56b6c2
+
+#: white
+color7 #a0a8b7
+color15 #abb2bf
 
 # Tab Bar
 
