--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,17 @@
 # vim:ft=kitty
 
 enable_audio_bell no
-font_family MesloLGS NF
+
+# kitty list-fonts
+# kitty --debug-font-fallback
+# https://sw.kovidgoyal.net/kitty/faq/#kitty-is-not-able-to-use-my-favorite-font
+# https://www.jetbrains.com/lp/mono/
+# https://github.com/ryanoasis/nerd-fonts/releases
+font_family JetBrains Mono
+symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d4,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f532,U+f0001-U+f1af0 Symbols Nerd Font Mono
+#font_family MesloLGS NF
+font_size 12
+text_composition_strategy 1.0 0
 
 enabled_layouts tall:bias=70, horizontal, fat:bias=70, vertical, stack, grid
 
@@ -21,33 +31,8 @@ map --when-focus-on var:in_editor ctrl+k
 map --when-focus-on var:in_editor ctrl+h
 map --when-focus-on var:in_editor ctrl+l
 
-# Linux mappings
-map ctrl+c copy_and_clear_or_interrupt
-map ctrl+v paste_selection_or_clipboard
-map --when-focus-on var:in_editor ctrl+c
-map --when-focus-on var:in_editor ctrl+v
-map kitty_mod+enter new_window_with_cwd
-map kitty_mod+1 goto_layout tall
-map kitty_mod+2 goto_layout horizontal
-map kitty_mod+3 goto_layout fat
-map kitty_mod+4 goto_layout vertical
-map kitty_mod+5 goto_layout stack
-map kitty_mod+6 goto_layout grid
-listen_on unix:@mykitty
-
-# Macos mappings
-# map cmd+c copy_and_clear_or_interrupt
-# map cmd+v paste_selection_or_clipboard
-# map --when-focus-on var:in_editor cmd+c
-# map --when-focus-on var:in_editor cmd+v
-# map cmd+enter new_window_with_cwd
-# map cmd+1 goto_layout tall
-# map cmd+2 goto_layout horizontal
-# map cmd+3 goto_layout fat
-# map cmd+4 goto_layout vertical
-# map cmd+5 goto_layout stack
-# map cmd+6 goto_layout grid
-# listen_on unix:/tmp/mykitty
+# Operating system specific settings
+include os_specific.conf
 
 # BEGIN_KITTY_THEME
 # One Dark-Darker
