--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,9 +9,9 @@ enable_audio_bell no
 # https://github.com/ryanoasis/nerd-fonts/releases
 font_family JetBrains Mono
 symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d4,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f532,U+f0001-U+f1af0 Symbols Nerd Font Mono
-#font_family MesloLGS NF
 font_size 12
 text_composition_strategy 1.0 0
+disable_ligatures always
 
 enabled_layouts tall:bias=70, horizontal, fat:bias=70, vertical, stack, grid
 
