--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -7,7 +7,7 @@
 
 foreground #a0a8b7
 background #181b20
-selection_foreground #a0a8b7
+selection_foreground none
 selection_background #323641
 
 #: The basic 16 colors
