more kitty layouts

--- a/kitty_mac/.config/kitty/os_specific.conf
+++ b/kitty_mac/.config/kitty/os_specific.conf
@@ -4,10 +4,11 @@ map cmd+v paste_selection_or_clipboard
 map --when-focus-on var:in_editor cmd+c
 map --when-focus-on var:in_editor cmd+v
 map cmd+enter new_window_with_cwd
-map cmd+1 goto_layout tall
-map cmd+2 goto_layout horizontal
-map cmd+3 goto_layout fat
-map cmd+4 goto_layout vertical
-map cmd+5 goto_layout stack
-map cmd+6 goto_layout grid
+map cmd+1 goto_layout tall:bias=50
+map cmd+2 goto_layout fat:bias=50
+map cmd+3 goto_layout tall:bias=70
+map cmd+4 goto_layout fat:bias=70
+map cmd+5 goto_layout horizontal
+map cmd+6 goto_layout vertical
+map cmd+0 toggle_layout stack
 listen_on unix:/tmp/mykitty
