--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ font_size 12
 text_composition_strategy 1.0 0
 disable_ligatures always
 
-enabled_layouts tall:bias=70, horizontal, fat:bias=70, vertical, stack, grid
+enabled_layouts tall:bias=50, fat:bias=50, tall:bias=70, fat:bias=70, horizontal, vertical, stack
 
 allow_remote_control yes
 
