--- a/kitty_linux/.config/kitty/os_specific.conf
+++ b/kitty_linux/.config/kitty/os_specific.conf
@@ -4,10 +4,11 @@ map ctrl+v paste_selection_or_clipboard
 map --when-focus-on var:in_editor ctrl+c
 map --when-focus-on var:in_editor ctrl+v
 map kitty_mod+enter new_window_with_cwd
-map kitty_mod+1 goto_layout tall
-map kitty_mod+2 goto_layout horizontal
-map kitty_mod+3 goto_layout fat
-map kitty_mod+4 goto_layout vertical
-map kitty_mod+5 goto_layout stack
-map kitty_mod+6 goto_layout grid
+map kitty_mod+1 goto_layout tall:bias=50
+map kitty_mod+2 goto_layout fat:bias=50
+map kitty_mod+3 goto_layout tall:bias=70
+map kitty_mod+4 goto_layout fat:bias=70
+map kitty_mod+5 goto_layout horizontal
+map kitty_mod+6 goto_layout vertical
+map kitty_mod+0 toggle_layout stack
 listen_on unix:@mykitty
