--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,7 +18,11 @@ enabled_layouts tall:bias=50, fat:bias=50, tall:bias=70, fat:bias=70, horizontal
 allow_remote_control yes
 
 tab_bar_edge top
-tab_bar_style slant
+tab_bar_style separator
+tab_separator ""
+tab_title_template " {fmt.fg.red}{bell_symbol}{activity_symbol}{' ' if layout_name == 'stack' else ''}{fmt.fg.tab}{index}:{title} "
+# tab_separator " │ "
+# tab_bar_min_tabs 1
 
 # See: https://sw.kovidgoyal.net/kitty/mapping/#conditional-mappings-depending-on-the-state-of-the-focused-window
 # Clear mapping and pass keymaps to vim directly when active
