--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,6 +6,7 @@ keybind = ctrl+shift+j=goto_split:bottom
 keybind = ctrl+shift+l=goto_split:right
 
 keybind = performable:ctrl+c=copy_to_clipboard
+keybind = performable:ctrl+v=paste_from_clipboard
 
 keybind = ctrl+shift+\=new_split:right
 keybind = ctrl+shift+-=new_split:down
