--- a/xps15/etc/cmdline.d/xps15.conf
+++ b/xps15/etc/cmdline.d/xps15.conf
@@ -1,1 +1,1 @@
-pcie_aspm=off xhci_hcd.quirks=0x80 systemd.tpm2_wait=false
+pcie_aspm=off xhci_hcd.quirks=0x80 systemd.tpm2_wait=false i915.enable_psr=0
